{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 84,
  "lineage": "692001ef-d894-81c4-e935-4ee45da81268",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "elastic_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a963ce9ef1c5e718",
            "association_id": "eipassoc-07bf1c37caa197b48",
            "domain": "vpc",
            "id": "eipalloc-0a963ce9ef1c5e718",
            "network_border_group": "us-east-1",
            "network_interface": "eni-08045d044448d398c",
            "private_dns": "ip-10-0-0-174.ec2.internal",
            "private_ip": "10.0.0.174",
            "public_dns": "ec2-3-226-90-230.compute-1.amazonaws.com",
            "public_ip": "3.226.90.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "priv",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-00874d747dde814fa",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-016cd2d7104a6f5d9",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-016cd2d7104a6f5d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0419df434cc288cf3",
            "private_dns": "ip-10-0-1-125.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.125",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b482edbaeccd41f0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0057470fc0489544d",
            "tags": {
              "Name": "private_instance"
            },
            "tags_all": {
              "Name": "private_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0430dbdf9b65d22"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06878d265978313ca",
            "arn": "arn:aws:ec2:us-east-1:724690408369:instance/i-0071d92e2a2ad99d9",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0071d92e2a2ad99d9",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0435d176cb457b8fb",
            "private_dns": "ip-10-0-0-44.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.44",
            "public_ip": "54.162.244.87",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d86b4ae7b1548a84",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07fab606a87ba2b5f",
            "tags": {
              "Name": "public_instance"
            },
            "tags_all": {
              "Name": "public_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f0430dbdf9b65d22"
            ]
          },
          "dependencies": [
            "aws_security_group.allow_http",
            "aws_subnet.subnets",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "lab2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:internet-gateway/igw-07d8679ee81669822",
            "id": "igw-07d8679ee81669822",
            "owner_id": "724690408369",
            "tags": {
              "Name": "igw_lab2"
            },
            "tags_all": {
              "Name": "igw_lab2"
            },
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "dependencies": [
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "Nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a963ce9ef1c5e718",
            "connectivity_type": "public",
            "id": "nat-0fd1ba538b3439487",
            "network_interface_id": "eni-08045d044448d398c",
            "private_ip": "10.0.0.174",
            "public_ip": "3.226.90.230",
            "subnet_id": "subnet-07fab606a87ba2b5f",
            "tags": {
              "Name": "NatGateway"
            },
            "tags_all": {
              "Name": "NatGateway"
            }
          },
          "dependencies": [
            "aws_eip.elastic_ip",
            "aws_internet_gateway.lab2",
            "aws_subnet.subnets",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-0b7b47b63e49b2d7f",
            "id": "rtb-0b7b47b63e49b2d7f",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "nat-0fd1ba538b3439487",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rout_table"
            },
            "tags_all": {
              "Name": "private-rout_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_nat_gateway.Nat",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:route-table/rtb-0db8b42ebb3e9dd13",
            "id": "rtb-0db8b42ebb3e9dd13",
            "owner_id": "724690408369",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-07d8679ee81669822",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table "
            },
            "tags_all": {
              "Name": "public_route_table "
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.lab2",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cf1726dbf200ec4b",
            "route_table_id": "rtb-0b7b47b63e49b2d7f",
            "subnet_id": "subnet-0057470fc0489544d"
          },
          "dependencies": [
            "aws_nat_gateway.Nat",
            "aws_route_table.private_route_table",
            "aws_subnet.subnets",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0673399a30e2cc075",
            "route_table_id": "rtb-0db8b42ebb3e9dd13",
            "subnet_id": "subnet-07fab606a87ba2b5f"
          },
          "dependencies": [
            "aws_internet_gateway.lab2",
            "aws_route_table.public_route_table",
            "aws_subnet.subnets",
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:security-group/sg-0f0430dbdf9b65d22",
            "description": "Allow  http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f0430dbdf9b65d22",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_http",
            "name_prefix": "",
            "owner_id": "724690408369",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "sg_http"
            },
            "tags_all": {
              "Name": "sg_http"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-07fab606a87ba2b5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07fab606a87ba2b5f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.0.0/24"
            },
            "tags_all": {
              "Name": "10.0.0.0/24"
            },
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "dependencies": [
            "aws_vpc.lab2"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:subnet/subnet-0057470fc0489544d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0057470fc0489544d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "724690408369",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "10.0.1.0/24"
            },
            "tags_all": {
              "Name": "10.0.1.0/24"
            },
            "vpc_id": "vpc-0a7c31487c3a0fb4a"
          },
          "dependencies": [
            "aws_vpc.lab2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "lab2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:724690408369:vpc/vpc-0a7c31487c3a0fb4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0bd161575e1f526cc",
            "default_route_table_id": "rtb-0923b21083f01a843",
            "default_security_group_id": "sg-05988df84133ee926",
            "dhcp_options_id": "dopt-0c9045477746072cc",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a7c31487c3a0fb4a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0923b21083f01a843",
            "owner_id": "724690408369",
            "tags": {
              "Name": "vpc_aws_lab2"
            },
            "tags_all": {
              "Name": "vpc_aws_lab2"
            }
          }
        }
      ]
    }
  ]
}